# web_module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  communicate.cpp  connector_manager.cpp  controller.cpp  curl_wrapper.cpp  event.cpp  main.cpp  url.cpp  web.cpp
Crow/git/: git
include/: communicate.h  connector_manager.h  controller.h  curl_wrapper.h  url.h  web.h
site/: index.html
