cmake_minimum_required(VERSION 3.10)
project(web_module)
set(CMAKE_THREAD_LIBS_INIT "-lpthread")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread ")
find_package(CURL REQUIRED) 
include_directories(${CURL_INCLUDE_DIR})
include_directories("include")
include_directories("connector_manager/include")
add_subdirectory(Crow)
add_subdirectory(connector_manager)
#event.cpp communicate.cpp
add_executable(${PROJECT_NAME} main.cpp url.cpp controller.cpp web.cpp)
#add_library(${PROJECT_NAME} SHARED src/server.cpp src/json.c src/exeception.cpp)
target_link_libraries(${PROJECT_NAME} -lm -pthread Crow ${CURL_LIBRARIES} connector_manager)
